# fast_basic

./: .coverage  .gitignore  pyproject.toml
fast_basic/: app.py  database.py  schemas.py  security.py  settings.py
fast_basic/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: b4bba88f4aa5_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_users.py
